--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,8 +36,10 @@
   <div class="row">
     <div class="col-xs-4" *ngFor="let book of books">
       <div class="thumbnail">
-        <img *ngIf="!book.volumeInfo.imageLinks" src="https://i.imgur.com/J5LVHEL.jpg" [alt]="book.volumeInfo.title">
-        <img *ngIf="book.volumeInfo.imageLinks" [src]="book.volumeInfo.imageLinks.thumbnail" [alt]="book.volumeInfo.title">
+        <img *ngIf="!book.volumeInfo.imageLinks" src="https://i.imgur.com/J5LVHEL.jpg" [alt]="book.volumeInfo.title" 
+        style="width: 200px; height: 200px; object-fit: cover;">
+        <img *ngIf="book.volumeInfo.imageLinks" [src]="book.volumeInfo.imageLinks.thumbnail" [alt]="book.volumeInfo.title" 
+        style="width: 200px; height: 200px; object-fit: cover;">
         <div class="caption">
           <p>{{ book.volumeInfo.title }}</p>
         </div>
