--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+      <form #f="ngForm">
         <div class="form-group">
           <div class="row">
             <div class="col-md-12">
               <label for="search"><h4>Search Books</h4></label>
-              <input class="form-control" type="text" name="search" id="search" ngModel required>
-            </div>
-          </div>  
-        </div>
-        <div class="form-group">
-          <div class="row">
-            <div class="col-md-12">
-              <button class="btn btn-primary" type="submit" name="submit">Search</button>
+              <input class="form-control" type="text" name="search" id="search" (input)="onInput(f.form.value.search)" ngModel required>
             </div>
           </div>  
         </div>
@@ -21,18 +14,6 @@
     </div>
   </div>
   <hr>
-
-  <!-- <div class="row">
-    <div class="col-md-12">
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let book of books">
-          <img src="{{ book.volumeInfo.imageLinks.thumbnail }}" alt="{{ book.volumeInfo.title }}" class="img-thumbnail">
-          {{ book.volumeInfo.title }}
-        </li>
-      </ul>
-    </div>
-  </div> -->
-
   <div class="row">
     <div class="col-xs-4" *ngFor="let book of books">
       <div class="thumbnail">
