--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,7 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <form #f="ngForm">
-        <div class="form-group">
-          <div class="row">
-            <div class="col-md-12">
-              <label for="search"><h4>Search Books</h4></label>
-              <input class="form-control" type="text" name="search" id="search" (input)="onInput(f.form.value.search)" ngModel required>
-            </div>
-          </div>  
-        </div>
-      </form>
-    </div>
-  </div>
+  <app-header></app-header>
   <hr>
-  <div class="row">
-    <div class="col-xs-4" *ngFor="let book of books">
-      <div class="thumbnail">
-        <img *ngIf="!book.volumeInfo.imageLinks" src="https://i.imgur.com/J5LVHEL.jpg" [alt]="book.volumeInfo.title" 
-        style="width: 200px; height: 200px; object-fit: cover;">
-        <img *ngIf="book.volumeInfo.imageLinks" [src]="book.volumeInfo.imageLinks.thumbnail" [alt]="book.volumeInfo.title" 
-        style="width: 200px; height: 200px; object-fit: cover;">
-        <div class="caption">
-          <p>{{ book.volumeInfo.title }}</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  <router-outlet></router-outlet>
 </div>
 
 
